stop threading, draw at framerate
Threads should be handled by the modules themselves.
I see a case where the number of colors makes a module impossible to
run at the target FPS and might warrant a separate thread at the top
level, but thats only practical when the draw time is long enough for
the module thread to be able to generate another frame. For now, its not
worth implementation but when there are more costly draw methods and
potentially high numbers of colors, it could net some nice performance.

--- a/src/modules/simple/Makefile
+++ b/src/modules/simple/Makefile
@@ -4,9 +4,10 @@ SRCD = src
 SRC = $(wildcard $(SRCD)/*.c)
 OBJ = $(patsubst $(SRCD)/%.c,$(MODULE_OBJD)/%.o,$(SRC))
 
+LDFLAGS = -lm
 
 $(LIB): $(OBJ)
-	$(CC) -o $@ -shared -fPIC $^
+	$(CC) -o $@ -shared -fPIC $(LDFLAGS) $^
 
 $(MODULE_OBJD)/%.o: $(SRCD)/%.c
 	$(CC) -c -o $@ -fPIC $^
